add auth method
