# docs/swagger.json
@@ -18,6 +18,68 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Authentifier un utlisateur",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentications"
+                ],
+                "summary": "Authentifier un utlisateur",
+                "parameters": [
+                    {
+                        "description": "Détails de l'utilisateur",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/authentications.AuthIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/authentications.AuthOut"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/me": {
+            "get": {
+                "description": "Voir le profil d'un utilisateur",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentications"
+                ],
+                "summary": "Voir le profil d'un utilisateur",
+                "parameters": [
+                    {
+                        "description": "Détails de l'utilisateur",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Récupère la liste de tous les utilisateurs.",
@@ -25,7 +87,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Récupère tous les utilisateurs",
                 "responses": {
@@ -49,7 +111,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Crée un nouvel utilisateur",
                 "parameters": [
@@ -80,12 +142,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Récupère un utilisateur par ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "ID de l'utilisateur",
                         "name": "id",
                         "in": "path",
@@ -110,7 +172,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Met à jour un utilisateur",
                 "parameters": [
@@ -143,7 +205,7 @@
             "delete": {
                 "description": "Supprime un utilisateur en fonction de son ID.",
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Supprime un utilisateur",
                 "parameters": [
@@ -166,7 +228,7 @@
             "post": {
                 "description": "Assigner un rôle spécifié à un utilisateur en fonction de son ID.",
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Assigner un rôle à un utilisateur",
                 "parameters": [
@@ -196,7 +258,7 @@
             "post": {
                 "description": "Supprimer un rôle spécifié d'un utilisateur en fonction de son ID.",
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Supprimer un rôle d'un utilisateur",
                 "parameters": [
@@ -224,6 +286,52 @@
         }
     },
     "definitions": {
+        "authentications.AuthIn": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "authentications.AuthOut": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "token": {
+                    "$ref": "#/definitions/authentications.Token"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "authentications.Token": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_at": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "required": [
